Fixed wrong color and color mismatch

--- a/ember-profiler/app/styles/clusters.css
+++ b/ember-profiler/app/styles/clusters.css
@@ -31,7 +31,7 @@
     background-color: #f00;
 }
 .selected-clusters li:nth-child(3) .dot {
-    background-color: yellow;
+    background-color: #f7931e;
 }
 
 
